Finish temporary header.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <header>
         <img class="logo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"/>
         <span class="logo"> My Times </span>
-        <nav>
-          <li>World</li>
-          <li>U.S</li>
-          <li>Tech</li>
-          <li>Science</li>
+        <nav class="nav">
+          <a>World</a>
+          <a>U.S</a>
+          <a>Tech</a>
+          <a>Science</a>
         </nav>
       </header>
     </div>
