--- a/index.html
+++ b/index.html
@@ -24,24 +24,22 @@
           <span id="image-content"> Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
         </div>
         <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa. </p>
-        <div id="story">
+        <div class"bottom">
+        <div id="story1">
           <div>
             <h2>Orca Spends Vacation at Land World Puget</h2>
             <p> PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-        </div>
-        <div id="story">
           <span class="fall"> Earth Spins Backwards for 2017 </span>
         </div>
         </div>
-        <div id="story">
+        <div id="story2">
         <div>
           <h2>Burger for Breakfast: How Early is too Early? </h2>
           <p> Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-        </div>
         <div>
-          <div id="story">
-            <span class="photo">Research Shows Cameras Erase Memory</span>
+          <span class="photo">Research Shows Cameras Erase Memory</span>
           </div>
+        </div>
         </div>
       </div>
     </div>
