made footer ish.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,20 @@
         </div>
         <div>
           <h3> New Bites </h3>
-          <p> Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+            <p class="news"> Cat Emoji Goes Viral</p> <p class="news">Buy Youtube Views </p> <p class="news">Home Business Advertising Ideas </p> <p class="news">Advertising Internet Online </p> <p class="news">Illustration in Marketing Materials </p> <p class="news"> Finally a Top Secret Way You Can</p>
+          </div>
         </div>
       </div>
-</div>
+    </div>
+  <footer class="container">
+    <h1 id="closing"> MYTime </h1>
+    <nav id="nav">
+      <a>World</a>
+      <a>U.S</a>
+      <a>Tech</a>
+      <a>Science</a>
+    </nav>
+    <p>© 2016, My Times (A Division of Codecademy bite) </p>
+  </footer>
   </body>
 </html>
