finish first draft.

--- a/index.html
+++ b/index.html
@@ -65,14 +65,18 @@
       </div>
     </div>
   <footer class="container">
-    <h1 id="closing"> MYTime </h1>
-    <nav id="nav">
-      <a>World</a>
-      <a>U.S</a>
-      <a>Tech</a>
-      <a>Science</a>
-    </nav>
-    <p>© 2016, My Times (A Division of Codecademy bite) </p>
+    <div>
+      <h1 id="closing"> MYTime </h1>
+      <nav id="nav">
+        <a>World</a>
+        <a>U.S</a>
+        <a>Tech</a>
+        <a>Science</a>
+      </nav>
+    </div>
+    <div>
+      <p id="copy">© 2016, My Times (A Division of Codecademy bite) </p>
+    </div>
   </footer>
   </body>
 </html>
