finish second draft.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <img class="logo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"/>
         <span class="logo"> My Times </span>
         <nav class="nav">
-          <a>World</a>
-          <a>U.S</a>
-          <a>Tech</a>
-          <a>Science</a>
+          <a href="#">World</a>
+          <a href="#">U.S</a>
+          <a href="#">Tech</a>
+          <a href="#">Science</a>
         </nav>
       </header>
     </div>
@@ -68,10 +68,10 @@
     <div>
       <h1 id="closing"> MYTime </h1>
       <nav id="nav">
-        <a>World</a>
-        <a>U.S</a>
-        <a>Tech</a>
-        <a>Science</a>
+        <a href="#">World</a>
+        <a href="#">U.S</a>
+        <a href="#">Tech</a>
+        <a href="#">Science</a>
       </nav>
     </div>
     <div>
